fixed icon labe stretching

--- a/src/block-components/block-div/style.scss
+++ b/src/block-components/block-div/style.scss
@@ -1,3 +1,3 @@
-.stk-block > *:where(:not(.stk-row, .stk-inner-blocks)) {
+.stk-block > *:where(:not(.stk-row, .stk-inner-blocks, .stk--svg-wrapper)) {
 	flex: 1;
 }
